--- a/index3_tech.html
+++ b/index3_tech.html
@@ -113,7 +113,7 @@
 							<!-- Main Nav Menu -->
 							<div class="main_nav_menu " style="left: 30px;">
 								<ul class="standard_dropdown main_nav_dropdown">
-									<li><a href="../News/index3.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-down"></i></a></li>
+									<li><a href="../News/index3.html">首頁<i class="fas fa-chevron-down"></i></a></li>
 									<li class="hassubs">
 										<a href="../News/index3_internation.html">國際<i class="fas fa-chevron-down"></i></a>
 										<ul>
@@ -130,11 +130,11 @@
 											<li><a href="#">德國之聲<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="../News/index3_political.html">
-										<a href="#">政治<i class="fas fa-chevron-down"></i></a>
+									<li class="hassubs">
+										<a href="../News/index3_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
-												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
+												<a href="../News/index3_location.html">政治影音<i class="fas fa-chevron-down"></i></a>
 												<ul>
 													<li><a href="#">2020開票結果<i class="fas fa-chevron-down"></i></a></li>
 													<li><a href="#">2020總統大選<i class="fas fa-chevron-down"></i></a></li>
@@ -173,7 +173,8 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="../News/index3_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
+									<li class="hassubs"><a href="../News/index3_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  
+                                        <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
@@ -181,7 +182,7 @@
 											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index3_tech.html">科技<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index3_tech.html" style="font-weight: 600;color: #17a2b8;">科技<i class="fas fa-chevron-down"></i></a>
                                         <ul>											
 											<li><a href="blog.html">iPhone手機<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">3C家電<i class="fas fa-chevron-down"></i></a></li>
@@ -217,9 +218,9 @@
 											<li><a href="regular.html">生活影音<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index3_weather.html">天氣</a>
+                                    <li class="hassubs"><a href="../News/index3_weather">天氣</a>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index3.html">影音</a>
+                                    <li class="hassubs"><a href="contact.html">影音</a>
                                     </li>
                                     <li class="hassubs"><a href="../News/index3_covid19.html"><i class="fas fa-hospital"></i>新冠病毒</a>
                                     </li>
@@ -239,7 +240,7 @@
 				</div>
 			</div>
 		</nav>	
-		<!-- Menu -->
+		<!-- Menu 
 		<div class="page_menu">
 			<div class="container">
 				<div class="row">
@@ -320,99 +321,53 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</header>
     <div class="row" style="padding: 20px;">
         <!-- Trends Slider -->
-        <div class="col-lg-12">
-            <div class="trends">
+<div class="trends">
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;"><a href="#">&nbsp首頁</a></div>
+                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp科技</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
-                                <div class="row">
+                                <div class="row">  
                                     <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">科技/iPhone手機</a></div>
+                                                <div class="advert_text"><a href="#">隱私更有保障！Google Maps無痕模式 iPhone用戶也能用</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_30.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">科技/iPhone手機</a></div>
+                                                <div class="advert_text"><a href="#">廖明毅初試啼聲 以iPhone拍出超前部署防疫愛情電影</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_29.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
                                                 <div class="advert_title"><a href="#">科技/3C家電</a></div>
-                                                <div class="advert_text"><a href="#">2020年五大科技趨勢，重大的改變和顛覆。</a></div>
+                                                <div class="advert_text"><a href="#">羅技G913 TKL 80％無線機械式鍵盤6月上市 續航力無「線」升級！</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/photo2.jpg" alt=""></div></div>
-                                       </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">生活/文教資訊</a></div>
-                                                <div class="advert_text"><a href="#">白老虎瀕臨絕種，人類開墾嚴重影響其棲息地。</a></div>
-                                            </div>
-                                        <div class="ml-auto"><div class="advert_image"><img src="images/photo3.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_32.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">天氣</a></div>
-                                                <div class="advert_text"><a href="#">一週天氣快看！午後雷陣雨旺盛 這天起高溫恐破36度</a></div>
+                                                <div class="advert_title"><a href="#">科技/人工智慧</a></div>
+                                                <div class="advert_text"><a href="#">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_10.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">財經/2020報稅</a></div>
-                                                <div class="advert_text"><a href="#">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/photo4.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">國際/國際大事</a></div>
-                                                <div class="advert_text"><a href="#">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_1.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">地方/中部離島</a></div>
-                                                <div class="advert_text"><a href="#">台中房價狂飆 房仲：西屯恐將破百萬</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_7.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">生活/文教資訊</a></div>
-                                                <div class="advert_text"><a href="#">口罩解禁！部分通路開賣日期確定了</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_2.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/政治要聞</a></div>
-                                                <div class="advert_text"><a href="#">紓困振興引爆民怨 時力民調：蔡英文滿意度大降近9%</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_3.jpg" alt=""></div></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 advert_col">
-                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
-                                            <div class="advert_content">
-                                                <div class="advert_title"><a href="#">財經/房地產</a></div>
-                                                <div class="advert_text"><a href="#">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
-                                            </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_8.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_31.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
@@ -423,14 +378,12 @@
             </div>        
         </div>
     </div>
-    <!-- Banner -->
+    <!-- Banner
 	<div class="banner_2">
 		<div class="banner_2_background" style="background-image:url(images/banner_2_background.jpg)"></div>
 		<div class="banner_2_container">
 			<div class="banner_2_dots"></div>
-			<!-- Banner 2 Slider -->
 			<div class="owl-carousel owl-theme banner_2_slider">
-                <!-- Banner 2 Slider Item -->
 				<div class="owl-item">
 					<div class="banner_2_item">
 						<div class="container fill_height">
@@ -452,7 +405,6 @@
 						</div>			
 					</div>
 				</div>
-				<!-- Banner 2 Slider Item -->
 				<div class="owl-item">
 					<div class="banner_2_item">
 						<div class="container fill_height">
@@ -475,7 +427,6 @@
 						</div>			
 					</div>
 				</div>
-				<!-- Banner 2 Slider Item -->
 				<div class="owl-item">
 					<div class="banner_2_item">
 						<div class="container fill_height">
@@ -499,7 +450,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Copyright -->
 
 	<div class="copyright">
